--- a/src/presentation/common/spinner/spinner.scss
+++ b/src/presentation/common/spinner/spinner.scss
@@ -1,4 +1,4 @@
-@import "../colors/colors.scss";
+@import '../colors/colors.scss';
 
 .spinner {
   display: inline-block;
@@ -41,7 +41,7 @@
   0% {
     transform: scale(0);
   }
-  
+
   100% {
     transform: scale(1);
   }
